--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,50 @@
     font-weight: 400;
     font-style: normal;
 }
+
+.indexmargin {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+
+.dropbtn2 {
+    background-color: #707b5f;
+    color: #bfc3b7;
+    border: none;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    position: absolute;
+    background-color: #9ba58e;
+    display: none;
+    min-width: 70px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 9999;
+
+  }
+  
+  
+  .dropdown-content a {
+    color: #dbded7;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  
+  .dropdown-content a:hover {background-color: #7c876d;}
+  
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .dropbtn2:hover {
+    color:#dbded7;
+  }
