--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,13 @@
     font-style: normal;
 }
 
+
+.rocareg {
+  font-family: "roca", sans-serif;
+font-weight: 400;
+font-style: normal;
+}
+
 .indexmargin {
     margin-left: 10px;
     margin-right: 10px;
@@ -41,8 +48,8 @@
 
 
 .dropbtn2 {
-    background-color: #8c967b;
-    color: #bfc3b7;
+    background-color: #fff9ec;
+    color: #837b64;
     border: none;
   }
   
@@ -53,7 +60,7 @@
   
   .dropdown-content {
     position: absolute;
-    background-color: #9ba58e;
+    background-color: #eae3d3;
     display: none;
     min-width: 70px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -63,14 +70,14 @@
   
   
   .dropdown-content a {
-    color: #dbded7;
+    color: #747c6c;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
   }
   
   
-  .dropdown-content a:hover {background-color: #7c876d;}
+  .dropdown-content a:hover {background-color: #cfc7b7;}
   
   
   .dropdown:hover .dropdown-content {
@@ -78,7 +85,7 @@
   }
 
   .dropbtn2:hover {
-    color:#dbded7;
+    color:#625a49;
   }
 
   .img{
@@ -95,7 +102,7 @@
   }
 
   div.scroll-container {
-    background-color: #eae3d3;
+    background-color: #fff9ec;
     overflow: auto;
     white-space: nowrap;
     padding: 10px;
@@ -105,4 +112,25 @@
   
   div.scroll-container img {
     padding: 10px;
+  }
+
+  .text {
+    font-size: 20px;
+    padding-left: 30px;
+    text-align: left;
+  }
+
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center
+  }
+
+    img {
+    max-width: 100%;
+    max-height:100%;
+  }
+
+  .p {
+    line-height: 0.5; 
   }
