--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,14 @@
 
 .rocareg {
   font-family: "roca", sans-serif;
-font-weight: 400;
-font-style: normal;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.rocathin {
+  font-family: "roca", sans-serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
 .indexmargin {
@@ -134,3 +140,5 @@ font-style: normal;
   .p {
     line-height: 0.5; 
   }
+
+  
