--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@
   
   .dropdown-content {
     position: absolute;
-    background-color: #eae3d3;
+    background-color: #fff9ec;
     display: none;
     min-width: 70px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -83,7 +83,7 @@
   }
   
   
-  .dropdown-content a:hover {background-color: #cfc7b7;}
+  .dropdown-content a:hover {background-color: rgb(238, 230, 214);}
   
   
   .dropdown:hover .dropdown-content {
@@ -139,6 +139,12 @@
 
   .p {
     line-height: 0.5; 
+  }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   
