--- a/css/style.css
+++ b/css/style.css
@@ -94,18 +94,7 @@
     color:#625a49;
   }
 
-  .img{
-    opacity: 1;
-  }
-
-  .img:hover {
-    opacity:0.7;
-  }
-  
-  .img:hover {
-    opacity:0.8;
-    transform: scale(0.9);
-  }
+ 
 
   div.scroll-container {
     background-color: #fff9ec;
@@ -133,8 +122,9 @@
   }
 
     img {
-    max-width: 100%;
-    max-height:100%;
+      display: inline-block;
+      position: relative;
+      overflow: hidden; 
   }
 
   .p {
@@ -147,3 +137,88 @@
     margin-right: auto;
   }
 
+
+.clickableImage {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s ease; 
+  margin: 0 auto;
+}
+
+.clickableImage:hover {  opacity: 0.8;
+  transform: scale(0.9);}
+
+
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1;
+  padding-top: 30px;
+  margin-top: 20px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); 
+  width: 80%; 
+  max-width: 600px;
+  height: auto;
+  background-color: rgb(140, 150, 131); 
+  border-radius: 15px;
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: auto; 
+  max-width: 60%;
+  max-height: 50%;
+  object-fit: contain;
+}
+
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ffffff;
+  padding: 10px 0;
+  height: 150px;
+  font-size:x-large;
+}
+
+
+
+.modal-content, #caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
+}
