--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,19 @@
     height: 400px;
 
   }
+
+  div.scroll-container2 {
+    overflow-x: auto;
+    width:100%;
+    white-space: nowrap;
+    padding: 10px;
+    height: 320px;
+    width: 100vw;
+  }
+
+  div.scroll-container2 img {
+    padding: 10px;
+  }
   
   div.scroll-container img {
     padding: 10px;
@@ -161,7 +174,7 @@
   width: 80%; 
   max-width: 600px;
   height: auto;
-  background-color: rgb(140, 150, 131); 
+  background-color: #ffffff; 
   border-radius: 15px;
 }
 
@@ -180,7 +193,7 @@
   width: 80%;
   max-width: 700px;
   text-align: center;
-  color: #ffffff;
+  color: #757d6d;
   padding: 10px 0;
   height: 150px;
   font-size:x-large;
@@ -221,4 +234,38 @@
   .modal-content {
     width: 100%;
   }
+}
+
+.grid-container {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-item {
+  text-align: left;
+  font-size: 30px;
+  padding:10px;
+}
+
+.lattes {
+  grid-column: 1 / span 2;
+  grid-row: 2;
+
+}
+
+.refreshers {
+  grid-column: 1 / span 2;
+  grid-row: 3;
+}
+
+
+.refreshers {
+  grid-column: 1 / span 2;
+  grid-row: 4;
+}
+
+.slushies {
+  grid-column: 1 / span 2;
+  grid-row: 4;
 }
